# napkinLLM

./: LICENSE  README.md  setup.cfg
napkinllm/: napkinllm.py
