[metadata]
name = napkinLLM
description = "A simple script/tool/minilibrary to run different LLM tasks"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mwydmuch/napkinLLM
license = MIT
license_files = LICENSE
platform = any
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.9
dependency_links =
install_requires =
    hf_transfer

[options.entry_points]
console_scripts =
    napkinllm = napkinllm.napkinllm:napkinllm

[options.extras_require]
local =
    torch
    transformers
vllm = 
    vllm>=0.5.1
    accelerate>=0.26.0
    nvidia-ml-py
openai =
    openai
claude =
    anthropic
